# xiaozhi-cpp-server

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  config.example.yaml  docker-compose.yml  run.sh
apps/: CMakeLists.txt  web_server.cpp
apps/tests/: CMakeLists.txt  asr.cpp  cozev3.cpp  dify.cpp  llm.cpp  paraformer.cpp  tts.cpp
include/funasr/paraformer/: com-define.h  commonfunc.h  paraformer.h  utils.h  vocab.h
include/xz-cpp-server/: connection.h  precomp.h  server.h
include/xz-cpp-server/asr/: base.h  bytedancev2.h  doubao.h  paraformer.h
include/xz-cpp-server/common/: logger.h  request.h  setting.h  threadsafe_queue.hpp  tools.h
include/xz-cpp-server/config/: logger.h  setting.h
include/xz-cpp-server/llm/: base.h  cozev3.h  dify.h  openai.h
include/xz-cpp-server/paraformer/: model.h  paraformer-online.h  phone-set.h  seg-dict.h
include/xz-cpp-server/silero_vad/: silero_vad.h  vad.h
include/xz-cpp-server/tts/: base.h  bytedancev3.h  edge.h
scripts/: install_deps.sh
scripts/tests/: concurr_ws_client.py  connect.py  https_echo.py  vad.py  wss_echo.py
src/: CMakeLists.txt  connection.cpp  server.cpp
src/asr/: CMakeLists.txt  base.cpp  bytedancev2.cpp  doubao.cpp  paraformer.cpp
src/common/: CMakeLists.txt  logger.cpp  request.cpp  setting.cpp  tools.cpp
src/config/: logger.cpp  setting.cpp
src/llm/: CMakeLists.txt  base.cpp  cozev3.cpp  dify.cpp  openai.cpp
src/paraformer/: CMakeLists.txt  model.cpp  paraformer-online.cpp  paraformer.cpp  phone-set.cpp  seg-dict.cpp  utils.cpp  vocab.cpp
src/silero_vad/: CMakeLists.txt  official.hpp  silero_vad.cpp  vad.cpp
src/tts/: CMakeLists.txt  base.cpp  bytedancev3.cpp  edge.cpp
tests/: CMakeLists.txt  test_find_last_segment.cpp
tests/common/: test_request.cpp  test_setting.cpp
tests/config/: test_setting.cpp
